Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20945

BACKUP UNLOCK + FTWRL assertion failure | SIGSEGV in I_P_List from MDL_context::release_lock on INSERT w/ BACKUP LOCK (on optimized builds) | Assertion `ticket->m_duration == MDL_EXPLICIT' failed.

    XMLWordPrintable

Details

    Description

      CREATE TABLE t1(a INT);
      BACKUP LOCK t1;
      FLUSH TABLE t1 WITH READ LOCK; # FOR EXPORT crashes as well
      UNLOCK TABLES;
      BACKUP UNLOCK;
      DROP TABLE t1;
      

      #7  0x00007fd9817ffc82 in __GI___assert_fail (assertion=0x564412c268a8 "ticket->m_duration == MDL_EXPLICIT", file=0x564412c26110 "/home/svoj/devel/maria/mariadb/sql/mdl.cc", line=2835, function=0x564412c270e0 <MDL_context::release_lock(MDL_ticket*)::__PRETTY_FUNCTION__> "void MDL_context::release_lock(MDL_ticket*)") at assert.c:101
      #8  0x000056441206d270 in MDL_context::release_lock (this=0x7fd930000c20, ticket=0x7fd930011950) at /home/svoj/devel/maria/mariadb/sql/mdl.cc:2835
      #9  0x000056441216fb18 in backup_unlock (thd=0x7fd930000b00) at /home/svoj/devel/maria/mariadb/sql/backup.cc:388
      #10 0x0000564411edfef3 in mysql_execute_command (thd=0x7fd930000b00) at /home/svoj/devel/maria/mariadb/sql/sql_parse.cc:5046
      #11 0x0000564411eea477 in mysql_parse (thd=0x7fd930000b00, rawbuf=0x7fd930013148 "BACKUP UNLOCK", length=13, parser_state=0x7fd979b7eff0, is_com_multi=false, is_next_command=false) at /home/svoj/devel/maria/mariadb/sql/sql_parse.cc:7912
      #12 0x0000564411ed54f2 in dispatch_command (command=COM_QUERY, thd=0x7fd930000b00, packet=0x7fd93019e0f1 "BACKUP UNLOCK", packet_length=13, is_com_multi=false, is_next_command=false) at /home/svoj/devel/maria/mariadb/sql/sql_parse.cc:1841
      #13 0x0000564411ed3ac3 in do_command (thd=0x7fd930000b00) at /home/svoj/devel/maria/mariadb/sql/sql_parse.cc:1359
      #14 0x000056441205cc16 in do_handle_one_connection (connect=0x564415bb4070) at /home/svoj/devel/maria/mariadb/sql/sql_connect.cc:1412
      #15 0x000056441205c912 in handle_one_connection (arg=0x564415bb4070) at /home/svoj/devel/maria/mariadb/sql/sql_connect.cc:1316
      

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              svoj Sergey Vojtovich
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d 0.45h
                  2d 0.45h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.