MDEV-20945 BACKUP UNLOCK + FTWRL assertion failure

BACKUP LOCK behavior is modified so it won't be used wrong:
* BACKUP LOCK should commit any active transactions;
* BACKUP LOCK should not be allowed for stored procedures;
* When BACKUP LOCK is active, don't allow any DDL's for that connection;
* FTWRL is forbidden while BACKUP LOCK is active.